--- a/styles.css
+++ b/styles.css
@@ -173,7 +173,7 @@ section {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 24px 48px 16px 48px;
+    padding: 24px 8px 16px 48px;
     box-sizing: border-box;
     font-size: 0.85rem;
     color: #bdbdbd;
